# LazyLifeInitRepo

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README_ZH.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/lazynote_flutter/: pubspec.yaml
crates/lazynote_core/: Cargo.toml
crates/lazynote_core/src/: lib.rs  logging.rs
crates/lazynote_core/src/db/: mod.rs  open.rs
crates/lazynote_core/src/db/migrations/: 0001_init.sql  0002_tags.sql  0003_external_mappings.sql  0004_fts.sql  0005_note_preview.sql  0008_workspace_tree_delete_policy.sql  0009_workspace_note_ref_backfill.sql  mod.rs
crates/lazynote_core/src/extension/: capability.rs  kernel.rs  manifest.rs  mod.rs
crates/lazynote_core/src/model/: atom.rs  mod.rs
crates/lazynote_core/src/repo/: atom_repo.rs  mod.rs  note_repo.rs  tree_repo.rs
crates/lazynote_core/src/search/: fts.rs  mod.rs
crates/lazynote_core/src/service/: atom_service.rs  mod.rs  note_service.rs  tree_service.rs
crates/lazynote_core/src/sync/: provider_registry.rs
crates/lazynote_core/tests/: atom_crud.rs  atom_model.rs  capability_guard_test.rs  db_migrations.rs  notes_tags.rs  search_fts.rs  workspace_tree.rs
crates/lazynote_ffi/: Cargo.toml
crates/lazynote_ffi/src/: api.rs  frb_generated.rs
docs/: FunctionImplementSynReport.md  review-01-architecture.md  review-02-engineering.md  roadmap.md
docs/api/: README.md  error-codes.md  ffi-contract-v0.1.md  ffi-contracts.md  single-entry-contract.md  workspace-tree-contract.md
docs/architecture/: data-model.md  engineering-standards.md  logging.md  (+7 more)
(+155 files in other folders)
