[package]
name = "lazynote_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.12"
