[package]
name = "lazynote_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lazynote_core = { path = "../lazynote_core" }
flutter_rust_bridge = { workspace = true }
log = "0.4"
rusqlite = { version = "0.32" }
uuid = "1.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
